--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SCOUT_DRIVER=null
 
 # Database
 DB_HOST=127.0.0.1
