--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,12 @@ GOOGLE_ACTIVE=false
 LINKEDIN_ACTIVE=false
 TWITTER_ACTIVE=false
 
+#Paystack
+PAYSTACK_PUBLIC_KEY=xxxxxxxxxxxxx
+PAYSTACK_SECRET_KEY=xxxxxxxxxxxxx
+PAYSTACK_PAYMENT_URL=https://api.paystack.co
+MERCHANT_EMAIL=null
+
 #FACEBOOK_CLIENT_ID=
 #FACEBOOK_CLIENT_SECRET=
 #FACEBOOK_REDIRECT=${APP_URL}/login/facebook/callback
